Removed Google API Key from code (and deleted key at GCP)

--- a/map-to-create-wip .html
+++ b/map-to-create-wip .html
@@ -55,7 +55,7 @@
 
       // This example requires the Visualization library. Include the libraries=visualization
       // parameter when you first load the API. For example:
-      //<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7si7MzCOsPqsAkXVr_yX1MORZb4SWN4E&libraries=visualization">
+      //<script src="https://maps.googleapis.com/maps/api/js?key=<API_KEY>&libraries=visualization">
 
       var map, heatmap, year;
 
@@ -377,6 +377,6 @@ new google.maps.LatLng(59.846279, 17.650115)]
 
       </script>
       <script async defer
-          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7si7MzCOsPqsAkXVr_yX1MORZb4SWN4E&libraries=visualization&callback=initMap"></script>
+          src="https://maps.googleapis.com/maps/api/js?key=<API_KEY>&libraries=visualization&callback=initMap"></script>
       </body>
 </html>
